# asmcrypto

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: ecdsa.rs  keccak.rs  mul_wide.rs
doc/: conversation.md  internals.md
examples/: ecdsa_batch.rs  gen_g_tables.rs  keccak_batch.rs  perf_ecdsa.rs  perf_fp_mul.rs  perf_mul.rs  perf_secp256k1.rs
src/: ecdsa.rs  ecdsa_batch.rs  ecdsa_clone.rs  g_tables_generated.rs  keccak.rs  lib.rs
