[package]
name = "asmcrypto"
version = "0.1.0"
edition = "2024"
description = "Register-parallel cryptographic primitives: 8-lane AVX-512 Keccak-256 batch and secp256k1 ECDSA batch address recovery, outperforming libsecp256k1."
license = "MIT OR Apache-2.0"
repository = "https://github.com/andy-thomason/asmcrypto"
documentation = "https://docs.rs/asmcrypto"
readme = "README.md"
keywords = ["keccak", "ecdsa", "secp256k1", "avx512", "ethereum"]
categories = ["cryptography", "algorithms"]

[dependencies]
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
# alloy-consensus Keccak backends
sha3 = "0.10"
tiny-keccak = { version = "2", features = ["keccak"] }
# alloy-consensus ECDSA backends
k256 = { version = "0.13", features = ["ecdsa"] }
secp256k1 = { version = "0.29", features = ["recovery", "global-context"] }
rand_core = { version = "0.6", features = ["getrandom"] }

[profile.bench]
debug = true

[[bench]]
name = "keccak"
harness = false

[[bench]]
name = "ecdsa"
harness = false

[[bench]]
name = "mul_wide"
harness = false

[[example]]
name = "keccak_batch"

[[example]]
name = "ecdsa_batch"
